Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114057

QDoc not parsing files with same name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.7.0 FF
    • 6.4.3
    • Build tools: qdoc
    • None
    • Linux/X11
    • b2447aadd (dev)
    • DaVinci 81, DaVinci 82

    Description

      During documenting a bug in the qdoc system was found:

      When we have two classes with the same name but in different scopes, (e.g. views.MainView and viewModels.MainView), qdocs behavior is not correct. It will not parse both MainView classes.

       

      Attachments

        For Gerrit Dashboard: QTBUG-114057
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniö
            michael.liesenberg Michael Liesenberg
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes