tests/auto/qdoc/generatedoutput/testdata/qml/doctest/DocTest.qml
@@ -1,0 +1,11 @@
+// Copyright (C) 2023 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0
+
+import QtQuick
+
+/*!
+    //! omit the \qmltype command, file name (base) is the type name.
+    \inqmlmodule Test.NoVer
+    \brief Shadows the type name in QDoc.Test module.
+*/
+Item {}
